# modal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SConstruct  __init__.py  detectionfunctions.py  lp.py  onsetdetection.py  setup.py  transientdetection.py
analysis/: nrt.py  polyphonic.py
apps/: editonsets.py
benchmark/: benchmark.py
detectionfunctions/: detectionfunctions.cpp  detectionfunctions.h  detectionfunctions.i  mq.cpp  mq.h
docs/: Makefile  conf.py  index.rst  installation.rst  use.rst
docs/_themes/flask/: theme.conf
examples/: example.py  rtexample.py
modal/: __init__.py  onsetdetection.py
modal/analysis/: __init__.py  nrt.py  polyphonic.py
modal/db/: __init__.py
modal/detectionfunctions/: __init__.py  detectionfunctions.cpp  detectionfunctions.h  detectionfunctions.py  detectionfunctions_wrap.cpp  lp.py  mq.cpp  mq.h  mq.py
modal/examples/: example.py  rtexample.py
modal/results/: best.py  computeresults.py
modal/ui/: editonsets.qrc  editonsetsui.ui  plot.py
modal/utils/: texttable.py
results/: __init__.py  avg.py  worst.py
src/: exceptions.cpp  exceptions.h  onsetdetection.cpp  onsetdetection.h
tests/: complex.py  energy.py  lp.py  mq.py  peakodfs.py  specdiff.py  test_complex.py  test_energy.py  test_lp.py  test_mq.py  test_peakodfs.py  test_specdiff.py
tests/audio/: README
tests/cpp/: test_common.h  test_detectionfunctions.cpp  test_detectionfunctions.h  test_onsetdetection.cpp  test_onsetdetection.h  tests.cpp
tests/py/: test_complex.py  test_energy.py  test_lp.py  test_mq.py  test_peakodfs.py  test_specdiff.py
ui/: editonsets_rc.py  editonsetsui.py  plot.py
utils/: progressbar.py
